# Elypso-hub

./: .gitignore  CHANGES.txt  CMakeLists.txt  FUTURE_GOALS.md  LIBRARIES.md  LICENSE.md  README.md  Windows_prerequisites.txt  build_all.bat  build_all_linux.sh  build_all_windows.bat  build_windows.bat  project.kmake
_external_shared/: copy_windows.bat
_external_shared/GLFW/: CHANGES.txt
_external_shared/GLM/: CHANGES.txt
_external_shared/Glad/: CHANGES.txt
_external_shared/Glad/src/: glad.c
_external_shared/ImGui/: CHANGES.txt
_external_shared/KalaUI/include/opengl/: ku_opengl_functions.hpp
_external_shared/Stb_image/: CHANGES.txt
_external_shared/magic_enum/: CHANGES.txt
debug/: README.md  version.rc
docs/: external_libraries.md
include/: core.hpp  createproject.hpp  gui.hpp  input.hpp  removeproject.hpp  render.hpp
indev/core/: core.hpp
release/: LICENSE.md  version.rc
src/: core.cpp  createproject.cpp  gui.cpp  input.cpp  main.cpp  removeproject.cpp  render.cpp
